<resources>
    <string name="app_name">Eyota Book Library</string>
    <string name="action_settings">Settings</string>

    <!-- Book View -->
    <string name="title">Titel</string>
    <string name="author">Author</string>
    <string name="year">Year</string>
    <string name="series">Series</string>
    <string name="series_number">Series Number</string>
    <string name="is_read">Read</string>
    <string name="is_favorite">Favorite</string>
    <string name="is_book">Book</string>
    <string name="is_ebook">e-Book</string>
    <string name="comment">Comment</string>
    <string name="done_loading">Done loading %d books.</string>
    <string name="filter">Search</string>
    <string name="edit_dropdown">edit_dropdown</string>
    <string name="edit">Edit</string>
    <string name="toggle_read">Toggle Read</string>
    <string name="toggle_book">Toggle Book</string>
    <string name="toggle_e_book">Toggle e-Book</string>
    <string name="delete">Delete</string>


    <string name="scan">Scan ISBN</string>
    <string name="google_books_url">https://www.googleapis.com</string>
    <string name="google_books_api_key">AIzaSyBB9YTJz1gCzPklljsDy1o1xsHB1oJnlqQ</string>
    <string name="isbn_query">isbn:%s</string>
    <string name="book_cover_image">Book Cover Image</string>
    <string name="validation_error_title">Title is mandatory</string>
    <string name="validation_error_author">Author is mandatory</string>
    <string name="wrong_year_format">Wrong Year entry</string>

    <string name="query">Query</string>
    <string name="search">Search</string>

    <string name="ff_url">http://www.fantasticfiction.co.uk</string>
    <string name="ff_img_url">https://img.fantasticfiction.com/bigthumbs</string>
    <string name="no_results">No Books found</string>
    <string name="new_book_added">New book added</string>
    <string name="book_alread_exists">Book already exists</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="book_updated">Book updated</string>
    <string name="book_count">Found %d books</string>


</resources>
