<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:id="@+id/card_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/row_content"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="2dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/title"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/thumbnail"
            android:layout_margin="@dimen/text_default_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/author"
            android:id="@+id/author"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@+id/thumbnail"
            android:layout_margin="@dimen/text_default_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/year"
            android:id="@+id/year"
            android:layout_below="@+id/author"
            android:layout_toEndOf="@+id/thumbnail"
            android:digits="4"
            android:layout_margin="@dimen/text_default_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/series"
            android:id="@+id/series"
            android:layout_below="@+id/author"
            android:layout_toEndOf="@+id/year"
            android:layout_margin="@dimen/text_default_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/series_number"
            android:id="@+id/seriesNumber"
            android:layout_below="@+id/author"
            android:layout_toEndOf="@+id/series"
            android:layout_margin="@dimen/text_default_margin"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_read"
            android:id="@+id/read"
            android:layout_below="@+id/series"
            android:layout_toEndOf="@+id/thumbnail"
            android:layout_margin="@dimen/text_default_margin"
            android:clickable="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_book"
            android:id="@+id/book"
            android:layout_below="@+id/series"
            android:layout_toEndOf="@+id/read"
            android:layout_margin="@dimen/text_default_margin"
            android:clickable="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_ebook"
            android:id="@+id/ebook"
            android:layout_below="@+id/series"
            android:layout_toEndOf="@+id/book"
            android:layout_margin="@dimen/text_default_margin"
            android:clickable="false" />

    </RelativeLayout>
</android.support.v7.widget.CardView>