<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="info.patsch.ebl.books.edit.EditBookFragment">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_margin="2dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"/>

    <ImageButton
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:background="#00ffffff"
        android:contentDescription="@string/scan"
        android:src="@drawable/ic_barcode_scan_black_48dp" />

    <CheckBox
        android:id="@+id/select_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_margin="@dimen/text_default_margin"
        android:button="@drawable/custom_checkbox_design_large"
        android:text="@string/is_read"/>

    <CheckBox
        android:id="@+id/select_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_margin="@dimen/text_default_margin"
        android:layout_toEndOf="@+id/select_read"
        android:button="@drawable/custom_checkbox_design_large"
        android:text="@string/is_book"/>

    <CheckBox
        android:id="@+id/select_ebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_margin="@dimen/text_default_margin"
        android:layout_toEndOf="@+id/select_book"
        android:button="@drawable/custom_checkbox_design_large"
        android:text="@string/is_ebook"/>

</RelativeLayout>